syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "EnsembleContextDescriptorType";

import "sdc/biceps/abstractcontextdescriptor.proto";

message EnsembleContextDescriptor {
  AbstractContextDescriptor abstract_context_descriptor = 1;
}
